Font fix, Selection color, page loading improves
In this commit the site have been modified to be more responsive and to have shorter loading time

--- a/contacts.html
+++ b/contacts.html
@@ -8,12 +8,13 @@ layout: blank
         <br><br>
         <h1 class="header center white-text floating-text-black">Contact us</h1>
         <div class="row center">
-            <h5 class="header col s12 light white-text floating-text-black">Get in touch with cSploit developers</h5>
+            <h5 class="tagline header col s12 light white-text floating-text-black">Get in touch with cSploit developers</h5>
         </div>
         <div class="row center">
             <a href="https://www.github.com/cSploit/" target="_blank" onclick="Materialize.toast('Redirected to Github', 4500)" id="git-button" class="btn-large waves-effect waves-light material-git black">Github</a>
             <a href="https://www.github.com/cSploit/" target="_blank" onclick="Materialize.toast('Redirected to Google', 4500)" id="google-button" class="btn-large waves-effect waves-light material-git red">Google Plus</a>
-            <a href="https://www.github.com/cSploit/" target="_blank" onclick="Materialize.toast('Redirected to Facebook', 4500)" id="twitter-button" class="btn-large waves-effect waves-light material-git light-blue">Twitter</a>
+            <a href="https://www.github.com/cSploit/" target="_blank" onclick="Materialize.toast('Redirected to Twitter', 4500)" id="twitter-button" class="btn-large waves-effect waves-light material-git light-blue">Twitter</a>
+            <a href="https://www.github.com/cSploit/" target="_blank" onclick="Materialize.toast('Redirected to Twitter', 4500)" id="fb-button" class="btn-large waves-effect waves-light material-git darken-2 blue">Facebook</a>
         </div>
         <br><br><br><br><br><br>
     </div>
