--- a/donate.html
+++ b/donate.html
@@ -9,7 +9,7 @@ layout: blank
     <br><br>
     <h1 class="header center white-text floating-text-black">Donate</h1>
     <div class="row center">
-      <h5 class="header col s12 light white-text floating-text-black">Make cSploit better supporting his development</h5>
+      <h5 class="tagline header col s12 light white-text floating-text-black">Make cSploit better supporting his development</h5>
     </div>
     <div class="row center">
       <a id="get-started-button" href="#DonateSec" class="btn-large waves-effect waves-light green">Donate</a>
