--- a/news.html
+++ b/news.html
@@ -8,7 +8,7 @@ position: 6
     <br><br>
     <h1 class="header center white-text floating-text-black">cSploit 2</h1>
     <div class="row center">
-      <h5 class="header col s12 light white-text floating-text-black">Official news</h5>
+      <h5 class="tagline header col s12 light white-text floating-text-black">Official news</h5>
     </div>
     <div class="row center">
       <a href="" id="download-button" class="btn-large waves-effect waves-light green">Subscribe at the newsletter</a>
