--- a/story.html
+++ b/story.html
@@ -7,7 +7,7 @@ layout: blank
 <div class="section no-pad-bot story-gradient" id="index-banner">
     <div class="container">
         <br><br>
-        <h1 class="header center white-text floating-text-black">Story</h1>
+        <h1 class="tagline header center white-text floating-text-black">Story</h1>
         <div class="row center">
             <h5 class="header col s12 light white-text floating-text-black">How cSploit was born</h5>
         </div>
