--- a/downloads.html
+++ b/downloads.html
@@ -8,7 +8,7 @@ layout: blank
         <br><br>
         <h1 class="header center white-text floating-text-white">Downloads</h1>
         <div class="row center">
-          <h5 class="header col s12 light white-text floating-text-white">Download builds for Android and iOS</h5>
+          <h5 class="tagline header col s12 light white-text floating-text-white">Download builds for Android and iOS</h5>
         </div>
         <div class="row center">
           <a href="" id="download-button" class="btn-large waves-effect waves-light green">Get Started</a>
