--- a/contacts.html
+++ b/contacts.html
@@ -6,9 +6,9 @@ layout: blank
 <div class="section no-pad-bot contacts-gradient" id="index-banner">
     <div class="container">
         <br><br>
-        <h1 class="header center white-text floating-text-black">Contact us</h1>
+        <h1 class="header center white-text floating-text-black white-font">Contact us</h1>
         <div class="row center">
-            <h5 class="tagline header col s12 light white-text floating-text-black">Get in touch with cSploit developers</h5>
+            <h5 class="tagline header col s12 light white-text floating-text-black white-font">Get in touch with cSploit developers</h5>
         </div>
         <div class="row center">
             <a href="https://www.github.com/cSploit/" target="_blank" onclick="Materialize.toast('Redirected to Github', 4500)" id="git-button" class="btn-large waves-effect waves-light material-git black">Github</a>
@@ -31,16 +31,15 @@ layout: blank
                     <h2 class="center green-text"><i class="medium material-icons">arrow_forward</i></h2>
                     <h5 class="center">cSploit target</h5>
 
-                    <p class="light">My final goal is to write an application that is able to:
-                    <ul class="light">
-                        <li><i class="tiny material-icons">check</i> Enumerate local hosts</li>
-                        <li><i class="tiny material-icons">check</i> Find vulnerabilities</li>
-                        <li><i class="tiny material-icons">check</i> Find exploits for these vulnerabilities</li>
-                        <li><i class="tiny material-icons">check</i> Use those exploits to gain access to the target</li>
-                        <li><i class="tiny material-icons">close</i> Crack wifi passwords</li>
-                        <li><i class="tiny material-icons">close</i> Install backdoors for later access</li>
-                    </ul>
-                    </p>
+                    <p class="light">My final goal is to write an application that is able to:</p>
+                      <ul class="light">
+                          <li><i class="tiny material-icons">check</i> Enumerate local hosts</li>
+                          <li><i class="tiny material-icons">check</i> Find vulnerabilities</li>
+                          <li><i class="tiny material-icons">check</i> Find exploits for these vulnerabilities</li>
+                          <li><i class="tiny material-icons">check</i> Use those exploits to gain access to the target</li>
+                          <li><i class="tiny material-icons">close</i> Crack wifi passwords</li>
+                          <li><i class="tiny material-icons">close</i> Install backdoors for later access</li>
+                      </ul>
                 </div>
             </div>
 
@@ -49,7 +48,7 @@ layout: blank
                     <h2 class="center green-text"><i class="medium material-icons">settings</i></h2>
                     <h5 class="center">Portability</h5>
 
-                    <p class="light">Thanks to the new go-based core, cSploit will be easily portable.
+                    <p class="light">Thanks to the new go-based core, cSploit will be easily portable.</p>
                         <br><br>
                         It can run on Android and iOS, also on Desktop OS, such as Windows, Linux and macOS.
                         cSploit 2 have a web-based UI [...] <!-- TODO: Build description --> </p>
@@ -61,17 +60,14 @@ layout: blank
                     <h2 class="center green-text"><i class="medium material-icons">insert_emoticon</i></h2>
                     <h5 class="center">Support us</h5>
 
-                    <p class="light">Please <a href="{{ 'donate/' | prepend: site.baseurl }}">donate</a> to cSploit to support our efforts and resources. Thank you!
+                    <p class="light">Please <a href="{{ 'donate/' | prepend: site.baseurl }}">donate</a> to cSploit to support our efforts and resources. Thank you!</p>
                         <br><br>
                         Also, if you want to contribute fork the repo you want to contribute to and create a pull request when you're done. If you actively contribute to the project I will ask you to join the team.</p>
                 </div>
             </div>
         </div>
-
-    </div>
     <br><br>
-
+</div>
     <div class="section">
-
     </div>
 </div>
