--- a/donate.html
+++ b/donate.html
@@ -32,13 +32,13 @@ The main goal of this crowdfunding is to purchase a small set of stuff to help t
   <li>- A new Thinkpad laptop with a good battery and memory</li>
   <li>- A set of common WiFi adapters</li>
   <li>- Some bluetooth adapter to add bluetooth hacking feature</li>
-  <li>- Some OTG adapters for pentestng over Ethernet and USB</li>
+  <li>- Some OTG adapters for pentesting over Ethernet and USB</li>
   <li>- An old used iPhone</li>
   <li>- csploit.org DNS record</li>
 </ul>
-As now I’m using a Thinkpad T60, purchased by a kindness guy of you.<br>
-Sadly the battery life it’s about 30 minutes ( even if I purchased the biggest one ).<br>
-Also using heavy development tools require a lot of memory, as now 3GB of memory isn’t enough.<br>
+As of now I’m using a Thinkpad T60, purchased by a kindness of a guy like you.<br>
+Sadly the battery life is about 30 minutes ( even after I purchased the biggest battery available for this laptop ).<br>
+Also using heavy development tools require a lot of memory, as of now I have 3GB of memory which isn’t enough.<br>
 <br />
 Thanks for your help! <i class="material-icons">thumb_up</i></p>
 
