--- a/downloads.html
+++ b/downloads.html
@@ -17,5 +17,5 @@ position: 3
 <div class="section">
   <h5>cSploit Nightly APK</h5>
   <p>Thanks to xaitax - nightly builds are available:</p>
-  <a href="https://rootbitch.cc/csploit/cSploit-nightly.apk" id="download-button-beta" class="btn green waves-effect waves-light">Download</a>
+  <a href="https://www.csploit.org/cSploit-nightly.apk" id="download-button-beta" class="btn green waves-effect waves-light">Download</a>
 </div>
